Fix jsonline parameter.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ install:
 - npm install jslint jsonlint -g
 script:
 - jslint schemas/*.json
-- cd schemas; for file in *.json; do jsonlint --inline $file; done; cd -
+- cd schemas; for file in *.json; do jsonlint $file --in-place; done; cd -
 - git diff --shortstat --exit-code
