--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ before_script:
 - git config --global user.email "automation@commercetools.de"
 - git config --global user.name "Travis-CI"
 - git config credential.helper "store --file=.git/credentials"
-- echo "https://${GH_TOKEN}:@github.com" > .git/credentials"
+- echo "https://${GH_TOKEN}:@github.com" > .git/credentials
 script:
 - git clone https://github.com/cneijenhuis/json-schema-ref-inliner.git
 - mkdir -p inlined
