--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_script:
 - echo "https://${GH_TOKEN}:@github.com" > .git/credentials
 script:
 - git clone https://github.com/cneijenhuis/json-schema-ref-inliner.git
-- for schema in schemas/*.schema.json; do file=$(basename $schema); params="$params https://raw.githubusercontent.com/sphereio/sphere-api-reference/master/${schema} inlined/."; done
+- for schema in schemas/*.schema.json; do file=$(basename $schema); params="$params https://raw.githubusercontent.com/sphereio/sphere-api-reference/master/${schema} ../inlined/."; done
 - cd json-schema-ref-inliner; sbt "run $params"; cd ..
 - changed_files=$(git diff --name-only | wc -l)
 - if [ "$changed_files" != "0" ]; then git add inlined/* && git commit -m "Inlined json schemas" && git push origin master; fi
