We don't like the output from jsonlint.
Example:
```
-
-  "required": ["key", "name", "countries", "currencies", "languages", "createdAt", "trialUntil"],
-
+  "required": [
+    "key",
+    "name",
+    "countries",
+    "currencies",
+    "languages",
+    "createdAt",
+    "trialUntil"
+  ],
```

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: scala
 install:
-- npm install jslint jsonlint -g
+- npm install jslint -g
 before_script:
 - git config --global user.email "automation@commercetools.de"
 - git config --global user.name "Travis-CI"
@@ -8,7 +8,6 @@ before_script:
 - echo "https://${GH_TOKEN}:@github.com" > .git/credentials
 script:
 - jslint schemas/*.json
-- cd schemas; for file in *.json; do jsonlint $file --in-place; done; cd -
 - git clone https://github.com/cneijenhuis/json-schema-ref-inliner.git
 - for schema in schemas/*.schema.json; do file=$(basename $schema); params="$params https://raw.githubusercontent.com/sphereio/sphere-api-reference/master/${schema} ../inlined/."; done
 - cd json-schema-ref-inliner; sbt "run $params"; cd ..
