added some markdown lint code example for later implementation.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "raml-object-to-raml": "*",
     "jsonlint": "*",
     "json-schema-deref-sync": "*",
-    "jsck": "*"
+    "jsck": "*",
+    "markdownlint": "*"
   },
   "private": true,
   "license": "MIT"
