Fixed examples and schemas, as requested by the validator

--- a/examples/product-projections.example.json
+++ b/examples/product-projections.example.json
@@ -50,10 +50,7 @@
         "en": "product with dates"
       },
       "description": {
-        "en": "
-<p>Used to test the various date attributes
-  <br>
-  </p>"
+        "en": "<p>Used to test the various date attributes<br></p>"
       },
       "categories": [],
       "slug": {
