fix issues reported by validators

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "traverse": "*",
-    "raml-parser": "*",
+    "raml-1-parser": "*",
     "raml-object-to-raml": "*",
     "jsonlint": "*",
     "json-schema-deref-sync": "*",
