add project type model add reference typeIds

--- a/examples/project.example.json
+++ b/examples/project.example.json
@@ -12,5 +12,8 @@
     "en"
   ],
   "createdAt": "2013-11-01T15:14:34.325Z",
-  "trialUntil": "2013-11-01T15:14:34.325Z"
+  "trialUntil": "2013-11-01T15:14:34.325Z",
+  "messages": {
+    "enabled": false
+  }
 }
