use latest stable node for travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: node_js
 node_js:
-  - "0.12"
+  - node
 install:
-  - npm install  
+  - npm install
 script:
   - node bin/validate-sources.js
   - node bin/explode-raml.js
