--- a/package.json
+++ b/package.json
@@ -7,14 +7,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "traverse": "*",
+    "jsck": "*",
+    "json-schema-deref-sync": "*",
+    "jsonlint": "*",
+    "markdownlint": "*",
+    "oas-raml-converter": "*",
     "raml-1-parser": "*",
     "raml-object-to-raml": "*",
-    "jsonlint": "*",
-    "json-schema-deref-sync": "*",
-    "jsck": "*",
-    "markdownlint": "*",
-    "oas-raml-converter": "*"
+    "traverse": "*"
   },
   "private": true,
   "license": "MIT"
