add api-console-cli to generate json representation of API reference

--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "jsck": "*",
-    "json-schema-deref-sync": "*",
-    "jsonlint": "*",
-    "markdownlint": "*",
-    "oas-raml-converter": "*",
-    "raml-1-parser": "*",
-    "traverse": "*"
+    "api-console-cli": "^0.2.1",
+    "jsck": "^0.3.1",
+    "json-schema-deref-sync": "^0.3.3",
+    "jsonlint": "^1.6.2",
+    "markdownlint": "^0.6.0",
+    "oas-raml-converter": "^0.2.5",
+    "raml-1-parser": "^1.1.28",
+    "traverse": "^0.6.6"
   },
   "private": true,
   "license": "MIT"
