add docker file for API console 4

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "bower": "^1.8.0",
     "api-console-cli": "^0.2.1",
     "jsck": "^0.3.1",
     "json-schema-deref-sync": "^0.3.3",
