fix extension destination and examples

--- a/examples/extensions.example.json
+++ b/examples/extensions.example.json
@@ -4,6 +4,10 @@
   "total": 1,
   "results": [
     {
+      "id": "8062243c-46fc-40b5-88a4-75e2216aef75",
+      "version": 1,
+      "createdAt": "2017-01-25T14:14:22.417Z",
+      "lastModifiedAt": "2017-01-25T14:14:22.417Z",
       "destination": {
         "type": "HTTP",
         "url": "https://example.org/extension"
