--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
-  "name": "sphere-api-reference",
-  "description": "SPHERE API master specification",
+  "name": "commercetools-api-reference",
+  "description": "Commercetools API master specification",
   "repository": {
     "type": "git",
-    "url": "https://github.com/sphereio/sphere-api-reference"
+    "url": "https://github.com/commercetools/commercetools-api-reference"
   },
   "dependencies": {},
   "devDependencies": {
     "api-console-cli": "^0.2.1",
     "bower": "^1.8.0",
-    "jsck": "^0.3.1",
-    "json-schema-deref-sync": "^0.3.3",
-    "jsonlint": "^1.6.2",
     "markdownlint": "^0.6.0",
-    "oas-raml-converter": "^0.2.5",
-    "raml-1-parser": "^1.1.28",
+    "oas-raml-converter": "^1.1.26",
+    "raml-1-parser": "^1.1.40",
     "traverse": "^0.6.6"
   },
   "private": true,
