fix dependency issues add script to convert raml to json using raml-json-enhance-node directly

--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "api-console-cli": "^0.2.1",
+    "api-console-cli": "^0.2.11",
+    "raml-json-enhance-node": "0.2.5",
     "bower": "^1.8.0",
-    "markdownlint": "^0.6.0",
+    "markdownlint": "^0.7.0",
     "oas-raml-converter": "^1.1.26",
     "raml-1-parser": "^1.1.40",
     "traverse": "^0.6.6"
