add generator for update actions

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "name": "commercetools/commercetools-api-reference",
     "type": "library",
-    "require": {}
+    "require": {
+        "symfony/yaml": "^3.2",
+        "guzzlehttp/psr7": "^1.0"
+    }
 }
