update lock files

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,9 @@ python:
 node_js:
 - node
 install:
-- npm install
+- npm i -g npm
+- npm i -g yarn
+- yarn install
 - pip install yamllint
 script:
 - node bin/explode-raml.js
