fix subscription example

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ script:
 - node bin/explode-raml.js
 - find . -iname '*.raml' | xargs yamllint -c yamllint.conf
 - docker run -v$(pwd):/api -p5050:5050 vrapio/vrap -c /api/update-actions.raml
+- docker run -v$(pwd):/api -p5050:5050 vrapio/vrap -rc /api/update-actions.raml
 branches:
   except:
 notifications:
