Added advanced Examples for Addresses, CustomTypes and Fields and further adjustments to examples

--- a/examples/OrderEdit/StagedOrderSetParcelMeasurementsAction.json
+++ b/examples/OrderEdit/StagedOrderSetParcelMeasurementsAction.json
@@ -2,7 +2,7 @@
   "action": "setParcelMeasurements",
   "parcelId": "{{parcelId}}",
   "measurements": {
-    "heightInMillimeters": 11,
-    "widthInMillimeters": 11
+    "heightInMillimeter": 11,
+    "widthInMillimeter": 11
   }
 }
