changed linter yaml config #2.

--- a/yamllint.conf
+++ b/yamllint.conf
@@ -6,7 +6,7 @@ ignore: |
 rules:
   indentation:
     spaces: consistent
-    indent-sequences: consistent
+    indent-sequences: whatever
   brackets:
     min-spaces-inside: 0
     max-spaces-inside: 1
