--- a/yamllint.conf
+++ b/yamllint.conf
@@ -12,8 +12,7 @@ rules:
     max-spaces-inside: 1
     min-spaces-inside-empty: -1
     max-spaces-inside-empty: -1
-  line-length:
-    max: 120
+  line-length: disable
   document-start: disable
   comments:
     require-starting-space: false
