add lint command

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
 - yarn install
 script:
 - node bin/explode-raml.js
-- prettier -c **/*.raml
+- yarn run lint:raml
 #- docker run -v$(pwd):/api vrapio/vrap -c /api/update-actions.raml
 - docker run -v$(pwd):/api vrapio/vrap -rc /api/update-actions.raml
 notifications:
