--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prettier": "^1.19.1"
   },
   "scripts": {
-    "format:raml": "prettier --write '**/*.raml'"
+    "format:raml": "prettier --write '**/*.raml'",
+    "lint:raml": "prettier -c '**/*.raml'"
   },
   "private": true,
   "license": "MIT"
