--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "commercetools/commercetools-api-reference",
     "type": "library",
-    "require": {
+    "require-dev": {
         "symfony/yaml": "^3.2",
         "guzzlehttp/psr7": "^1.0"
     }
