WIP: adapt project to get cartConfiguration as in documentation

--- a/examples/project.example.json
+++ b/examples/project.example.json
@@ -16,5 +16,8 @@
   "trialUntil": "2013-11-01T15:14:34.325Z",
   "messages": {
     "enabled": false
+  },
+  "carts": {
+    "countryTaxRateFallbackEnabled": false
   }
 }
