--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,4 @@
 on:
-  - pull_request
   - push
 name: CI
 
@@ -41,5 +40,11 @@ jobs:
       - name: Generate
         run: bin/types.php && bin/generate-updates.php && bin/types.php
 
-      - name: Show status
-        run: git status
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "TASK: Updating RAML types"
+          file_pattern: types/*.raml
+          # Optional commit user and author settings
+          commit_user_name: Auto Mation
+          commit_user_email: automation@commercetools.com
+          commit_author: Auto Mation <automation@commercetools.com>
