fix update GH action

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -58,7 +58,7 @@ jobs:
         run: docker run -v$(pwd):/api vrapio/vrap -rc /api/update-actions.raml
 
       - name: Generate OAS files
-        run: bin/oas-convert.js
+        run: yarn run oas_convert
 
       - name: Generate postman collection
         run: docker run --rm -v$(pwd):/api -v$(pwd):/out vrapio/rmf-codegen generate -o /out/postman -t postman /api/postman.raml
