--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "format:raml": "prettier --write '**/*.raml'",
-    "lint:raml": "prettier -c '**/*.raml'"
+    "lint:raml": "prettier -c '**/*.raml'",
+    "oas_convert": "node bin/oas-convert.js"
   },
   "private": true,
   "license": "MIT"
