commit postman json files only

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -66,7 +66,7 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "TASK: Updating RAML types, Postman and OAS definition"
-          file_pattern: types/*.raml api.swagger.json api.swagger3.json postman/*
+          file_pattern: types/*.raml api.swagger.json api.swagger3.json postman/*.json
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
