--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -63,10 +63,13 @@ jobs:
       - name: Generate postman collection
         run: docker run --rm -v$(pwd):/api -v$(pwd):/out vrapio/rmf-codegen generate -o /out/postman -t postman /api/postman.raml
 
+      - name: clean
+        run: git checkout -- postman/connection_settings.png postman/gen.properties
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: "TASK: Updating RAML types, Postman and OAS definition"
-          file_pattern: types/*.raml api.swagger.json api.swagger3.json postman/*.json
+          file_pattern: types/*.raml api.swagger.json api.swagger3.json postman/*
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
