fix postman task

--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -22,7 +22,7 @@ jobs:
           path: postman
 
       - name: Generate postman collection
-        run: docker run --rm -v"$PWD/api":/api -v"$PWD/postman":/out vrapio/rmf-codegen generate -o /out -t postman /api/postman.raml
+        run: docker run --rm -v"$PWD/api":/api -v"$PWD/postman":/out vrapio/rmf-codegen generate -o /out/api -t postman /api/postman.raml
 
       - name: Show Git status
         run: cd postman && git status
