--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -1,5 +1,7 @@
 on:
-  - push
+  - push:
+      branches:
+        - master
 name: Postman collection
 
 jobs:
@@ -24,16 +26,13 @@ jobs:
       - name: Generate postman collection
         run: docker run --rm -v"$PWD/api":/api -v"$PWD/postman":/out vrapio/rmf-codegen generate -o /out/api -t postman /api/postman.raml
 
-      - name: Show Git status
-        run: cd postman && git status
-
       - name: clean postman folder
-        run: git checkout -- postman/connection_settings.png postman/gen.properties
+        run: cd postman && git checkout -- api/gen.properties
 
-#      - uses: stefanzweifel/git-auto-commit-action@v4
-#        with:
-#          repository: postman
-#          commit_message: "TASK: Updating RAML types, Postman and OAS definition"
-#          commit_user_name: Auto Mation
-#          commit_user_email: automation@commercetools.com
-#          commit_author: Auto Mation <automation@commercetools.com>
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          repository: postman
+          commit_message: "TASK: Updating Postman collection"
+          commit_user_name: Auto Mation
+          commit_user_email: automation@commercetools.com
+          commit_author: Auto Mation <automation@commercetools.com>
