skip integration tests for now

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -65,7 +65,7 @@ jobs:
 
       - name: Run tests
         working-directory: sdk
-        run: vendor/bin/phpunit
+        run: vendor/bin/phpunit --testsuite=unit
 
       - name: Prettify
         working-directory: sdk
