--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -27,6 +27,10 @@ jobs:
           tools: composer
           ini-values: assert.exception=1, zend.assertions=1, pcov.directory=., pcov.exclude="~vendor~"
 
+      - uses: actions/setup-java@v1
+        with:
+          java-version: '13'
+
       - name: "Cache dependencies installed with composer"
         uses: actions/cache@v1
         with:
@@ -34,6 +38,9 @@ jobs:
           key: php${{ matrix.php-version }}-composer-${{ hashFiles('**/composer.json') }}
           restore-keys: |
             php${{ matrix.php-version }}-composer-
+
+      - name: "Install codegen"
+        run: export VRAP_VERSION=1.0.0-20200716082813 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
 
       - name: Checkout api reference
         uses: actions/checkout@v2
@@ -47,10 +54,10 @@ jobs:
           path: sdk
 
       - name: Generate Base files
-        run: docker run --rm -v"$PWD/api":/api -v"$PWD/sdk":/out vrapio/rmf-codegen:php generate -o /out/lib/commercetools-base -t PHP_BASE -b "commercetools" /api/update-actions.raml
+        run: rmf-codegen generate -o /sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" /api/update-actions.raml
 
       - name: Generate PHP SDK
-        run: docker run --rm -v"$PWD/api":/api -v"$PWD/sdk":/out vrapio/rmf-codegen:php generate -o /out/lib/commercetools-api -t PHP_CLIENT -s "commercetools" -b "commercetools/api" /api/update-actions.raml
+        run: rmf-codegen generate -o /sdk/lib/commercetools-api -t PHP_CLIENT -s "commercetools" -b "commercetools/api" /api/update-actions.raml
 
       - name: Install dependencies with composer
         working-directory: sdk
@@ -61,11 +68,7 @@ jobs:
         run: vendor/bin/phpunit --testsuite=unit
 
       - name: Generate PHP SDK Tests
-        run: docker run --rm -v"$PWD/api":/api -v"$PWD/sdk":/out vrapio/rmf-codegen:php generate -o /out/lib/commercetools-api-tests -t PHP_TEST -s "commercetools" -b "commercetools/api" /api/update-actions.raml
-
-      - name: Run tests
-        working-directory: sdk
-        run: vendor/bin/phpunit --testsuite=unit
+        run: rmf-codegen generate -o /sdk/lib/commercetools-api-tests -t PHP_TEST -s "commercetools" -b "commercetools/api" /api/update-actions.raml
 
       - name: Prettify
         working-directory: sdk
@@ -74,6 +77,10 @@ jobs:
       - name: Static analyser
         working-directory: sdk
         run: vendor/bin/psalm
+
+      - name: Run tests
+        working-directory: sdk
+        run: vendor/bin/phpunit --testsuite=unit
 
       - name: git status
         working-directory: sdk
