fix generator pathes

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -54,10 +54,10 @@ jobs:
           path: sdk
 
       - name: Generate Base files
-        run: rmf-codegen generate -o /sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" /api/update-actions.raml
+        run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
 
       - name: Generate PHP SDK
-        run: rmf-codegen generate -o /sdk/lib/commercetools-api -t PHP_CLIENT -s "commercetools" -b "commercetools/api" /api/update-actions.raml
+        run: rmf-codegen generate -o sdk/lib/commercetools-api -t PHP_CLIENT -s "commercetools" -b "commercetools/api" api/update-actions.raml
 
       - name: Install dependencies with composer
         working-directory: sdk
@@ -68,7 +68,7 @@ jobs:
         run: vendor/bin/phpunit --testsuite=unit
 
       - name: Generate PHP SDK Tests
-        run: rmf-codegen generate -o /sdk/lib/commercetools-api-tests -t PHP_TEST -s "commercetools" -b "commercetools/api" /api/update-actions.raml
+        run: rmf-codegen generate -o sdk/lib/commercetools-api-tests -t PHP_TEST -s "commercetools" -b "commercetools/api" api/update-actions.raml
 
       - name: Prettify
         working-directory: sdk
