--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -76,7 +76,7 @@ jobs:
 
       - name: Static analyser
         working-directory: sdk
-        run: vendor/bin/psalm
+        run: vendor/bin/psalm --threads=2
 
       - name: Run tests
         working-directory: sdk
@@ -86,10 +86,12 @@ jobs:
         working-directory: sdk
         run: git status
 
-#      - uses: stefanzweifel/git-auto-commit-action@v4
-#        with:
-#          repository: postman
-#          commit_message: "TASK: Updating Postman collection"
-#          commit_user_name: Auto Mation
-#          commit_user_email: automation@commercetools.com
-#          commit_author: Auto Mation <automation@commercetools.com>
+      - uses: stefanzweifel/git-auto-commit-action@v4
+        if: github.ref == 'master'
+        with:
+          repository: postman
+          branch: develop
+          commit_message: "TASK: Updating Postman collection"
+          commit_user_name: Auto Mation
+          commit_user_email: automation@commercetools.com
+          commit_author: Auto Mation <automation@commercetools.com>
