fix php warning

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,7 +25,7 @@ jobs:
           coverage: pcov
           extensions: json, mbstring, intl
           tools: composer
-          ini-values: assert.exception=1, zend.assertions=1, pcov.directory=., pcov.exclude="~vendor~"
+          ini-values: assert.exception=1, zend.assertions=1
 
       - name: "Setup node"
         uses: actions/setup-node@v1
