--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -87,7 +87,7 @@ jobs:
         run: git status
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.ref == 'master'
+        if: github.ref == 'refs/heads/master'
         with:
           repository: postman
           branch: develop
