--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -89,7 +89,7 @@ jobs:
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: github.ref == 'refs/heads/master'
         with:
-          repository: postman
+          repository: sdk
           branch: develop
           commit_message: "TASK: Updating Postman collection"
           commit_user_name: Auto Mation
