fix checked out SDK branch

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -52,6 +52,7 @@ jobs:
         with:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
+          ref: develop
 
       - name: Generate Base files
         run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
@@ -90,8 +91,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         with:
           repository: sdk
-          branch: develop
-          commit_message: "TASK: Updating Postman collection"
+          commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
