--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -1,14 +1,12 @@
 on:
   - push
-#  push:
-#    branches:
-#      - master
-name: SDKs
+
+name: "SDKs"
 
 jobs:
 
   php:
-    name: Generate PHP SDK
+    name: "Generate PHP SDK"
 
     runs-on: ubuntu-latest
 
@@ -27,7 +25,8 @@ jobs:
           tools: composer
           ini-values: assert.exception=1, zend.assertions=1
 
-      - uses: actions/setup-java@v1
+      - name: "Install Java"
+        uses: actions/setup-java@v1
         with:
           java-version: '13'
 
@@ -42,50 +41,46 @@ jobs:
       - name: "Install codegen"
         run: export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
 
-      - name: Checkout api reference
+      - name: "Checkout api reference"
         uses: actions/checkout@v2
         with:
           path: api
 
-      - name: Checkout postman collection
+      - name: "Checkout PHP SDK"
         uses: actions/checkout@v2
         with:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
           ref: develop
 
-      - name: Generate Base files
+      - name: "Generate Base files"
         run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
 
-      - name: Generate PHP SDK
+      - name: "Generate PHP SDK"
         run: rmf-codegen generate -o sdk/lib/commercetools-api -t PHP_CLIENT -s "commercetools" -b "commercetools/api" api/update-actions.raml
 
-      - name: Install dependencies with composer
+      - name: "Install dependencies with composer"
         working-directory: sdk
         run: composer install --no-ansi --no-interaction --no-progress --no-suggest
 
-      - name: Run tests to check for BC issue
+      - name: "Run tests to check for BC issue"
         working-directory: sdk
         run: vendor/bin/phpunit --testsuite=unit
 
-      - name: Generate PHP SDK Tests
+      - name: "Generate PHP SDK Tests"
         run: rmf-codegen generate -o sdk/lib/commercetools-api-tests -t PHP_TEST -s "commercetools" -b "commercetools/api" api/update-actions.raml
 
-      - name: Prettify
+      - name: "Prettify"
         working-directory: sdk
         run: ./prettify.sh
 
-      - name: Static analyser
+      - name: "Run static analysis"
         working-directory: sdk
         run: vendor/bin/psalm --threads=2
 
-      - name: Run tests
+      - name: "Run tests"
         working-directory: sdk
         run: vendor/bin/phpunit --testsuite=unit
-
-      - name: git status
-        working-directory: sdk
-        run: git status
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: github.ref == 'refs/heads/master'
