--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -90,3 +90,4 @@ jobs:
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
+          push_options: --force
