--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -52,6 +52,7 @@ jobs:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
           ref: develop
+          token: ${{ secrets.SDK_PAT_TOKEN }}
 
       - name: "Generate Base files"
         run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
@@ -90,4 +91,3 @@ jobs:
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
           commit_author: Auto Mation <automation@commercetools.com>
-          push_options: --force
