try with unprotected branch

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -52,7 +52,7 @@ jobs:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
           ref: develop
-          token: ${{ secrets.SDK_PAT_TOKEN }}
+#          token: ${{ secrets.SDK_PAT_TOKEN }}
 
       - name: "Generate Base files"
         run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
