test with branch

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -84,9 +84,10 @@ jobs:
         run: vendor/bin/phpunit --testsuite=unit
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.ref == 'refs/heads/master'
+#        if: github.ref == 'refs/heads/master'
         with:
           repository: sdk
+          branch: develop
           commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
