test deploy key

--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -51,6 +51,8 @@ jobs:
         with:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
+          ref: develop
+          ssh_key: ${{ secrets.GH_ACTION_DEPLOY_KEY }}
 #          token: ${{ secrets.SDK_PAT_TOKEN }}
 
       - name: "Generate Base files"
@@ -86,6 +88,7 @@ jobs:
 #        if: github.ref == 'refs/heads/master'
         with:
           repository: sdk
+          branch: develop
           commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
