--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -52,7 +52,7 @@ jobs:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
           ref: develop
-          ssh_key: ${{ secrets.GH_ACTION_DEPLOY_KEY }}
+          ssh-key: ${{ secrets.GH_ACTION_DEPLOY_KEY }}
 #          token: ${{ secrets.SDK_PAT_TOKEN }}
 
       - name: "Generate Base files"
