use deploy keys for updating other repositories

--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -22,6 +22,7 @@ jobs:
         with:
           repository: 'commercetools/commercetools-postman-collection'
           path: postman
+          ssh-key: ${{ secrets.POSTMAN_DEPLOY_KEY }}
 
       - name: Generate postman collection
         run: docker run --rm -v"$PWD/api":/api -v"$PWD/postman":/out vrapio/rmf-codegen generate -o /out/api -t postman /api/postman.raml
