--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -52,8 +52,7 @@ jobs:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
           ref: develop
-          ssh-key: ${{ secrets.GH_ACTION_DEPLOY_KEY }}
-#          token: ${{ secrets.SDK_PAT_TOKEN }}
+          ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
 
       - name: "Generate Base files"
         run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
@@ -85,7 +84,7 @@ jobs:
         run: vendor/bin/phpunit --testsuite=unit
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-#        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/master'
         with:
           repository: sdk
           branch: develop
