--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -5,7 +5,7 @@ name: Update RAML
 jobs:
 
   generate:
-    name: Update RAML spec
+    name: "Update RAML spec"
 
     runs-on: ubuntu-latest
 
@@ -15,7 +15,7 @@ jobs:
           - "7.4"
 
     steps:
-      - name: Checkout
+      - name: "Checkout"
         uses: actions/checkout@v2
 
       - name: "Install PHP with extensions"
@@ -40,30 +40,30 @@ jobs:
           restore-keys: |
             php${{ matrix.php-version }}-composer-
 
-      - name: Install dependencies with composer
+      - name: "Install dependencies with composer"
         run: composer install --no-ansi --no-interaction --no-progress --no-suggest
 
       - run: yarn install
 
-      - name: Update RAML files
+      - name: "Update RAML files"
         run: bin/types.php && bin/generate-updates.php && bin/types.php
 
-      - name: Check markdown
+      - name: "Check markdown"
         run: node bin/explode-raml.js
 
-      - name: Lint RAML
+      - name: "Lint RAML"
         run: yarn run lint:raml
 
-      - name: Validate RAML
+      - name: "Validate RAML"
         run: docker run -v$(pwd):/api vrapio/vrap -rc /api/update-actions.raml
 
-      - name: Generate OAS files
+      - name: "Generate OAS files"
         run: yarn run oas_convert
 
-      - name: Generate postman collection
+      - name: "Generate postman collection"
         run: docker run --rm -v$(pwd):/api -v$(pwd):/out vrapio/rmf-codegen generate -o /out/postman -t postman /api/postman.raml
 
-      - name: clean postman folder
+      - name: "clean postman folder"
         run: git checkout -- postman/connection_settings.png postman/gen.properties
 
       - uses: stefanzweifel/git-auto-commit-action@v4
