--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -52,7 +52,7 @@ jobs:
           repository: 'commercetools/commercetools-php-sdk-v2'
           path: sdk
           ref: develop
-#          token: ${{ secrets.SDK_PAT_TOKEN }}
+          ssh-key: ${{ secrets.SDK_DEPLOY_KEY }}
 
       - name: "Generate Base files"
         run: rmf-codegen generate -o sdk/lib/commercetools-base -t PHP_BASE -b "commercetools" api/update-actions.raml
@@ -87,6 +87,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         with:
           repository: sdk
+          branch: develop
           commit_message: "TASK: Updating SDK"
           commit_user_name: Auto Mation
           commit_user_email: automation@commercetools.com
