--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -83,8 +83,13 @@ jobs:
         working-directory: sdk
         run: vendor/bin/phpunit --testsuite=unit
 
+      - name: "Changes pending"
+        working-directory: sdk
+        run: git diff-index --quiet HEAD -- ':(exclude)*gen.properties' && echo "::set-env name=changes_pending::$?"
+
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: github.ref == 'refs/heads/master'
+        if: env.changes_pending == 1
+        #github.ref == 'refs/heads/master' &&
         with:
           repository: sdk
           branch: develop
