--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -29,7 +29,7 @@ jobs:
         run: docker run --rm -v"$PWD/api":/api -v"$PWD/postman":/out vrapio/rmf-codegen generate -o /out/api -t postman /api/postman.raml
 
       - name: "Check changes pending"
-        working-directory: sdk
+        working-directory: postman
         run: git diff-index --quiet HEAD -- ':(exclude)*gen.properties' && echo "::set-env name=changes_pending::$?"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
