--- a/.github/workflows/sdk.yml
+++ b/.github/workflows/sdk.yml
@@ -85,10 +85,10 @@ jobs:
 
       - name: "Changes pending"
         working-directory: sdk
-        run: git diff-index --quiet HEAD -- ':(exclude)*gen.properties' && echo "::set-env name=changes_pending::$?"
+        run: git diff-index --quiet HEAD -- ':(exclude)*gen.properties' ; echo "::set-env name=changes_pending::$?"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.changes_pending == 1
+        if: env.changes_pending == '1'
         #github.ref == 'refs/heads/master' &&
         with:
           repository: sdk
