--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -13,10 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: "Install PHP with extensions"
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '7.4'
+          coverage: pcov
+          extensions: json, mbstring, intl
+          tools: composer
+          ini-values: assert.exception=1, zend.assertions=1
+
       - name: "Install Java"
         uses: actions/setup-java@v1
         with:
           java-version: '13'
+
+      - name: "Install codegen"
+        run: export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
 
       - name: "Checkout api reference"
         uses: actions/checkout@v2
@@ -29,9 +41,6 @@ jobs:
           repository: 'commercetools/commercetools-postman-collection'
           path: postman
           ssh-key: ${{ secrets.POSTMAN_DEPLOY_KEY }}
-
-      - name: "Install codegen"
-        run: export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
 
       - name: "Generate postman collection"
         run: rmf-codegen generate -o postman/api -t postman api/postman.raml
