fix local bin rights

--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -13,14 +13,6 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: "Install PHP with extensions"
-        uses: shivammathur/setup-php@v2
-        with:
-          php-version: '7.4'
-          coverage: pcov
-          extensions: json, mbstring, intl
-          tools: composer
-          ini-values: assert.exception=1, zend.assertions=1
 
       - name: "Install Java"
         uses: actions/setup-java@v1
@@ -28,7 +20,7 @@ jobs:
           java-version: '13'
 
       - name: "Install codegen"
-        run: export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
+        run: chmod 777 /usr/local/bin && export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
 
       - name: "Checkout api reference"
         uses: actions/checkout@v2
