fix local bin rights

--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -20,7 +20,7 @@ jobs:
           java-version: '13'
 
       - name: "Install codegen"
-        run: chmod 777 /usr/local/bin && export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
+        run: sudo chmod 777 /usr/local/bin && export VRAP_VERSION=1.0.0-20200716101307 && curl -o- -s https://raw.githubusercontent.com/vrapio/rmf-codegen/master/scripts/install.sh | bash
 
       - name: "Checkout api reference"
         uses: actions/checkout@v2
