--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: "Check changes pending"
         working-directory: postman
-        run: git diff-index --quiet HEAD -- ':(exclude)*gen.properties' ; echo "::set-env name=changes_pending::$?"
+        run: git diff-index --name-only HEAD -- ':(exclude)*gen.properties' ; ! git diff-index --quiet HEAD -- ':(exclude)*gen.properties' ; echo "::set-env name=changes_pending::$?"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         if: env.changes_pending == '1'
