--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -42,7 +42,7 @@ jobs:
         run: git diff-index --name-only HEAD -- ':(exclude)*gen.properties' ; ! git diff-index --quiet HEAD -- ':(exclude)*gen.properties' ; echo "::set-env name=changes_pending::$?"
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: env.changes_pending == '1'
+        if: ${{ env.changes_pending == '1' }}
         with:
           repository: postman
           commit_message: "TASK: Updating Postman collection"
