--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -39,10 +39,15 @@ jobs:
 
       - name: "Check changes pending"
         working-directory: postman
-        run: git diff-index --name-only HEAD -- ':(exclude)*gen.properties' ; ! git diff-index --quiet HEAD -- ':(exclude)*gen.properties' ; echo "::set-env name=changes_pending::$?"
+        run: git diff-index --name-only HEAD -- ':(exclude)*gen.properties' ; git diff-index --quiet HEAD -- ':(exclude)*gen.properties' ; echo "::set-env name=CHANGES_PENDING::$?"
+        continue-on-error: true
+
+      - name: "printev"
+        working-directory: postman
+        run: printenv
 
       - uses: stefanzweifel/git-auto-commit-action@v4
-        if: ${{ env.changes_pending == '1' }}
+        if: ${{ env.CHANGES_PENDING == '1' }}
         with:
           repository: postman
           commit_message: "TASK: Updating Postman collection"
