--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -39,7 +39,11 @@ jobs:
 
       - name: "Check changes pending"
         working-directory: postman
-        run: git diff-index --name-only HEAD -- ':(exclude)*gen.properties' ; git diff-index --quiet HEAD -- ':(exclude)*gen.properties' ; echo "::set-env name=CHANGES_PENDING::$?"
+        run: |
+          set -e
+          git diff-index --name-only HEAD -- ':(exclude)*gen.properties'
+          git diff-index --quiet HEAD -- ':(exclude)*gen.properties'
+          echo "::set-env name=CHANGES_PENDING::$?"
         continue-on-error: true
 
       - name: "printev"
