--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -41,9 +41,10 @@ jobs:
         working-directory: postman
         run: |
           set +e
-          git diff-index --name-only HEAD -- ':(exclude)*gen.properties'
           git diff-index --quiet HEAD -- ':(exclude)*gen.properties'
           echo "::set-env name=CHANGES_PENDING::$?"
+          git status
+          git diff
 
       - name: "printev"
         working-directory: postman
