--- a/.github/workflows/postman.yml
+++ b/.github/workflows/postman.yml
@@ -39,9 +39,7 @@ jobs:
 
       - name: "Check changes pending"
         working-directory: postman
-        run: |
-          CHANGES_PENDING=git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^
-          echo "::set-env name=CHANGES_PENDING::$CHANGES_PENDING"
+        run: CHANGES_PENDING=`git status --porcelain -- ':(exclude)*gen.properties' | grep -c ^` ; echo "::set-env name=CHANGES_PENDING::$CHANGES_PENDING"
 
       - name: "printev"
         working-directory: postman
